# FIAP-Tech-Challenge-3

./: .env.example  .gitignore  README.md  api.py  api_translate.py  main.py  pyproject.toml
data/interim/: clean_dataset.parquet
data/processed/: test.parquet  train.parquet
data/raw/: dataset.parquet  features.parquet  target.parquet
frontend/: streamlit_app.py
models/: best_model.joblib
models/archive/: final_lgbm_pipeline.joblib  final_lgbm_pipeline_v2.joblib
notebooks/: rmzi-eda.ipynb
notebooks/archive/: bank_marketing_notebook_1.html  bank_marketing_notebook_1.ipynb
scripts/: make_dataset.py  train_model.py
src/: config.py
src/app/: api.py  main.py  ml_model.py  schemas.py
src/data/: dowload.py  download.py  load.py  preprocess.py  split.py
src/models/: train.py  transforms.py
streamlit/: streamlit_app.py
