[project]
name = "fiap-tech-challenge-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "imblearn>=0.0",
    "imbalanced-learn>=0.14.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "optuna>=4.5.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "ucimlrepo>=0.0.7",
    "xgboost>=3.0.5",
]
