[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiap-tech-challenge-3"
version = "0.1.0"
description = "API e scripts para ingestão, processamento e previsão do dataset Bank Marketing."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.2",
    "uvicorn>=0.36.0",
    "pandas>=2.3.2",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "matplotlib>=3.10.6",
    "seaborn>=0.13.2",
    "streamlit>=1.49.1",
    "ucimlrepo>=0.0.7"
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
